--- a/PaymentInterfaceProject/pom.xml
+++ b/PaymentInterfaceProject/pom.xml
@@ -29,5 +29,10 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE150</version>
+        </dependency>
     </dependencies>
 </project>
